--- a/cities.html
+++ b/cities.html
@@ -40,6 +40,17 @@
 </div>
 <p>city name break's first</p>
 <p>City names break first as they were assigned medium column grid so when we minimise the screen to small screen they break as they are medium grid but the letters will not break as they are given the small grid. </p>
+<div class="container">
+    <img class="img-fluid" src="adeleide.jpg" height="400px" width="500px" alt="adelaide">
+    <img class="img-fluid" src="los.jpg" height="400px" width="500px" alt="losangeles">
+    <img class="img-fluid" src="paris.jpg" height="400px" width="500px" alt="paris">
+</div>
+
+    <div class="container">
+    <img class="img-thumbnail" src="adeleide.jpg" height="200px" width="200px" alt="adelaide">
+    <img class="img-thumbnail" src="los.jpg" height="200px" width="200px" alt="losangeles">
+    <img class="img-thumbnail" src="paris.jpg" height="200px" width="200px" alt="paris">
+</div>
 
 
 </body>
